# cnpy

./: CMakeLists.txt  README.md  build.sh  setup.sh
example/: CMakeLists.txt  build.sh  example.cpp
